# nqueens

./: CMakeLists.txt  README.md  main.cpp
board/: board.cpp  board.h
queen/: queen.h
